--- a/gitops-safe/overlays/dev/kustomization.yaml
+++ b/gitops-safe/overlays/dev/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: humor-game
 metadata:
   name: humor-game-dev
-  namespace: humor-game
 
 # This is a MONITORING-ONLY setup - it won't modify your working app
 # It just tracks what's different between Git and your cluster
@@ -14,17 +14,18 @@ resources:
 
 # Resources to monitor (starting with safe ConfigMap)
 # This will show ArgoCD what should be in the cluster
-resources: []
+#resources: []
 
 # Common labels for tracking
-commonLabels:
-  app.kubernetes.io/name: humor-game
-  app.kubernetes.io/instance: dev
-  app.kubernetes.io/part-of: gitops-demo
-  app.kubernetes.io/managed-by: argocd
+labels:
+  - pairs:
+      app.kubernetes.io/name: humor-game
+      app.kubernetes.io/instance: dev
+      app.kubernetes.io/part-of: gitops-demo
+      app.kubernetes.io/managed-by: argocd
 
 # Common annotations for tracking
-commonAnnotations:
+annotations:
   argocd.argoproj.io/tracking-id: humor-monitor:/kustomization.yaml
   gitops.argoproj.io/description: "Safe GitOps monitoring for Humor Game"
 
