--- a/gitops-safe/overlays/dev/kustomization.yaml
+++ b/gitops-safe/overlays/dev/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
 
 # Resources to monitor (starting with safe ConfigMap)
 # This will show ArgoCD what should be in the cluster
-resources: []
+#resources: []
 
 # Common labels for tracking
 labels:
